@@ -25,3 +25,4 @@
 17-Mar-2022 - V0.31 Update hierarchical search path for models in RepositoryProvider(), and use configured PDBX_COMP_MODEL_SANDBOX_PATH value for topRepoPath;
                     Update HoldingsProvider classes to address issues with remote data loading
 28-Mar-2022 - V0.32 Resolve Pylint issues
+ 5-Apr-2022 - V0.33 Add support in RepositoryProvider for loading id code lists for bird_chem_comp_core (mainly used for Azure testing)
